@@ -18,14 +18,13 @@ package org.apache.solr;
  */
 
 import java.io.File;
-import java.util.HashMap;
-import java.util.Map;
 import java.util.SortedMap;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.solr.client.solrj.SolrServer;
 import org.apache.solr.client.solrj.embedded.EmbeddedSolrServer;
 import org.apache.solr.client.solrj.embedded.JettySolrRunner;
+import org.apache.solr.client.solrj.embedded.JettySolrRunner.SSLConfig;
 import org.apache.solr.client.solrj.impl.HttpSolrServer;
 import org.apache.solr.util.ExternalPaths;
 import org.eclipse.jetty.servlet.ServletHolder;
@@ -44,20 +43,19 @@ abstract public class SolrJettyTestBase extends SolrTestCaseJ4
   // without breaking configs.
   public String getSolrHome() { return ExternalPaths.EXAMPLE_HOME; }
 
-  private static boolean manageSslProps = true;
   private static File TEST_KEYSTORE;
-  private static final Map<String,String> SSL_PROPS = new HashMap<String,String>();
   static {
     TEST_KEYSTORE = (null == ExternalPaths.SOURCE_HOME)
       ? null : new File(ExternalPaths.SOURCE_HOME, "example/etc/solrtest.keystore");
-    String keystorePath = null == TEST_KEYSTORE ? null : TEST_KEYSTORE.getAbsolutePath();
+  }
 
-    SSL_PROPS.put("tests.jettySsl","false");
-    SSL_PROPS.put("tests.jettySsl.clientAuth","false");
-    SSL_PROPS.put("javax.net.ssl.keyStore", keystorePath);
-    SSL_PROPS.put("javax.net.ssl.keyStorePassword","secret");
-    SSL_PROPS.put("javax.net.ssl.trustStore", keystorePath);
-    SSL_PROPS.put("javax.net.ssl.trustStorePassword","secret");
+  private static void initSSLConfig(SSLConfig sslConfig, String keystorePath) {
+    sslConfig.useSsl = false;
+    sslConfig.clientAuth = false;
+    sslConfig.keyStore = keystorePath;
+    sslConfig.keyStorePassword = "secret";
+    sslConfig.trustStore = keystorePath;
+    sslConfig.trustStorePassword = "secret";
   }
 
   /**
@@ -74,46 +72,43 @@ abstract public class SolrJettyTestBase extends SolrTestCaseJ4
   @BeforeClass
   public static void beforeSolrJettyTestBase() throws Exception {
 
-    // consume the same amount of random no matter what
-    final boolean trySsl = random().nextBoolean();
-    final boolean trySslClientAuth = random().nextBoolean();
+
     
     // only randomize SSL if we are a solr test with access to the example keystore
     if (null == getExampleKeystoreFile()) {
       log.info("Solr's example keystore not defined (not a solr test?) skipping SSL randomization");
-      manageSslProps = false;
       return;
     }
 
     assertTrue("test keystore does not exist, randomized ssl testing broken: " +
                getExampleKeystoreFile().getAbsolutePath(), 
                getExampleKeystoreFile().exists() );
-    
-    // only randomize SSL if none of the SSL_PROPS are already set
-    final Map<Object,Object> sysprops = System.getProperties();
-    for (String prop : SSL_PROPS.keySet()) {
-      if (sysprops.containsKey(prop)) {
-        log.info("System property explicitly set, so skipping randomized ssl properties: " + prop);
-        manageSslProps = false;
-        return;
-      }
-    }
 
-    if (manageSslProps) {
-      log.info("Randomized ssl ({}) and clientAuth ({})", trySsl, trySslClientAuth);
-      for (String prop : SSL_PROPS.keySet()) {
-        System.setProperty(prop, SSL_PROPS.get(prop));
-      }
-      // now explicitly re-set the two random values
-      System.setProperty("tests.jettySsl", String.valueOf(trySsl));
-      System.setProperty("tests.jettySsl.clientAuth", String.valueOf(trySslClientAuth));
-    }
   }
 
   public static JettySolrRunner jetty;
   public static int port;
   public static SolrServer server = null;
   public static String context;
+  
+  public static SSLConfig getSSLConfig() {
+    SSLConfig sslConfig = new SSLConfig();
+    
+    final boolean trySsl = random().nextBoolean();
+    final boolean trySslClientAuth = random().nextBoolean();
+    
+    log.info("Randomized ssl ({}) and clientAuth ({})", trySsl,
+        trySslClientAuth);
+    String keystorePath = null == TEST_KEYSTORE ? null : TEST_KEYSTORE
+        .getAbsolutePath();
+    initSSLConfig(sslConfig, keystorePath);
+    
+    sslConfig.useSsl = trySsl;
+    sslConfig.clientAuth = trySslClientAuth;
+    
+    initSSLConfig(sslConfig, keystorePath);
+    return sslConfig;
+  }
 
   public static JettySolrRunner createJetty(String solrHome, String configFile, String schemaFile, String context,
                                             boolean stopAtShutdown, SortedMap<ServletHolder,String> extraServlets) 
@@ -128,7 +123,7 @@ abstract public class SolrJettyTestBase extends SolrTestCaseJ4
 
     context = context==null ? "/solr" : context;
     SolrJettyTestBase.context = context;
-    jetty = new JettySolrRunner(solrHome, context, 0, configFile, schemaFile, stopAtShutdown, extraServlets);
+    jetty = new JettySolrRunner(solrHome, context, 0, configFile, schemaFile, stopAtShutdown, extraServlets, getSSLConfig());
 
     jetty.start();
     port = jetty.getLocalPort();
@@ -148,11 +143,6 @@ abstract public class SolrJettyTestBase extends SolrTestCaseJ4
       jetty = null;
     }
     server = null;
-    if (manageSslProps) {
-      for (String prop : SSL_PROPS.keySet()) {
-        System.clearProperty(prop);
-      }
-    }
   }
 
 
